fix: use VITE_API_BASE_URL in EuroExtremes

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=0, minimal-ui" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <meta
       name="description"
-      content="Datta able react with webpack admin template made using bootstrap 5 and it has huge amount of ready made feature, UI components, pages which completely fulfills any dashboard needs."
+      content="Kickback is a UEFA Euro Championship analytics dashboard that visualizes country performance, team trends, historic insights, and match data through interactive maps, timelines, and charts."
     />
     <meta
       name="keywords"
-      content="Admin templates, Bootstrap Admin templates, React, Webpack, bootstrap 5, Dashboard, Dashboard Templates, sass admin templates, html admin templates, Responsive, Bootstrap Admin templates free download, React Admin templates free download,premium Bootstrap Admin templates,premium React Admin templates download"
+      content="UEFA Euro, Football Statistics, Soccer Analytics, National Teams, Team Performance, Interactive Dashboard, EURO history, EURO 2024, React Dashboard, PostgreSQL, Data Visualization"
     />
-    <meta name="author" content="Codedthemes" />
+    <meta name="author" content="YujianSong" />
     <meta name="theme-color" content="#000000" />
     <!-- Favicon & Manifest -->
     <link rel="icon" href="/favicon.ico" />
